Bootstrap and navbar added

--- a/ball-threejs/styles.css
+++ b/ball-threejs/styles.css
@@ -8,3 +8,15 @@ body,
 html {
     overflow-x: hidden;
 }
+
+.webgl {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.nav {
+  position: relative;
+  z-index: 2;
+}
