--- a/ball-threejs/styles.css
+++ b/ball-threejs/styles.css
@@ -1,12 +1,12 @@
-*{
+* {
   margin: 0;
-  padding:  0;
-  box-sizing: border-box;  
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body,
 html {
-    overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 .webgl {
@@ -18,5 +18,17 @@ html {
 
 .nav {
   position: relative;
+  z-index: 2;
+}
+
+.title {
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-weight: bold;
+  font-style: oblique;
+  color: antiquewhite;
+  position: absolute;
+  left: 50%;
+  top: 75%;
+  transform: translate(-50%, -75%);
   z-index: 2;
 }
